Add setup scripts and documentation for Notion workspace organization
- Add comprehensive setup guides (QUICK_START.md, WORKSPACE_SETUP.md, etc.)
- Add workspace access testing scripts (check-setup.js, test-workspace-access.js)
- Add page organization scripts (organize-en-pages.js, list-en-pages.js)
- Add archive scripts for workspace cleanup (archive-*.js)
- Update README.md with setup instructions
- Add @notionhq/client and dotenv dependencies
- Use environment variables for API keys (NOTION_KEY env var)
- Add .env.example for configuration
- Note: Workspace-level page management has API limitations

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,9 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .vite/
 
+
+# Log files
+*.log
+organize-log.txt
+archive-log.txt
+archive-today-log.txt
