--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "lint-staged": "^15.2.2",
     "markdownlint-cli": "^0.39.0",
     "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "@notionhq/client": "^5.6.0",
+    "dotenv": "^17.2.3"
   }
 }
